--- a/app/src/main/res/layout/activity_fixed_header.xml
+++ b/app/src/main/res/layout/activity_fixed_header.xml
@@ -4,6 +4,6 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".view.tamplate.FixedHeader">
+    tools:context=".view.tamplate.FixedHeaderActivity">
 
 </androidx.constraintlayout.widget.ConstraintLayout>
