--- a/app/src/main/res/layout/activity_fixed_header.xml
+++ b/app/src/main/res/layout/activity_fixed_header.xml
@@ -25,7 +25,11 @@
             android:layout_width="match_parent"
             android:layout_height="50dp"
             android:minHeight="0dp"
-            app:contentInsetStart="0dp" />
+            app:contentInsetStart="0dp" >
+
+            <include layout="@layout/view_base_fixed_header" />
+
+        </androidx.appcompat.widget.Toolbar>
     </com.google.android.material.appbar.AppBarLayout>
 
 </RelativeLayout>
