--- a/app/src/main/res/layout/activity_fixed_header.xml
+++ b/app/src/main/res/layout/activity_fixed_header.xml
@@ -25,9 +25,14 @@
             android:layout_width="match_parent"
             android:layout_height="50dp"
             android:minHeight="0dp"
+            android:outlineProvider="none"
             app:contentInsetStart="0dp" >
 
-            <include layout="@layout/view_base_fixed_header" />
+            <include
+                android:id="@+id/header"
+                android:layout_width="match_parent"
+                android:layout_height="50dp"
+                layout="@layout/view_base_fixed_header" />
 
         </androidx.appcompat.widget.Toolbar>
     </com.google.android.material.appbar.AppBarLayout>
