--- a/app/src/main/res/layout/view_base_fixed_header.xml
+++ b/app/src/main/res/layout/view_base_fixed_header.xml
@@ -1,10 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
+    android:layout_height="50dp"
     xmlns:tools="http://schemas.android.com/tools"
-    android:background="#E4E4E4"
-    android:padding="24dp">
+    android:background="#E4E4E4">
 
     <ImageView
         android:id="@+id/leftButton"
