--- a/app/src/main/res/layout/activity_test.xml
+++ b/app/src/main/res/layout/activity_test.xml
@@ -1,15 +1,20 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/layout_root"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".view.test.TestActivity">
 
-    <include
-        android:id="@+id/fixed_header"
-        layout="@layout/activity_fixed_header"
+    <TextView
         android:layout_width="match_parent"
-        android:layout_height="50dp"/>
+        android:layout_height="match_parent"
+        android:gravity="top"
+        android:text="asdfasdfasdfasdfasdf" />
+
+
+
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
