--- a/app/src/main/res/layout/view_base_fixed_header.xml
+++ b/app/src/main/res/layout/view_base_fixed_header.xml
@@ -1,9 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="50dp"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:background="#E4E4E4">
+    android:background="#E4E4E4"
+    android:gravity="center_vertical"
+    android:paddingLeft="20dp"
+    android:paddingRight="20dp">
 
     <ImageView
         android:id="@+id/leftButton"
@@ -22,9 +25,9 @@
         android:layout_toRightOf="@+id/leftButton"
         android:ellipsize="end"
         android:singleLine="true"
-        tools:text="TitleTitleTitleTitleTitleTitleTitleTitleTitleTitleTitle"
         android:textSize="17sp"
-        android:textStyle="bold" />
+        android:textStyle="bold"
+        tools:text="TitleTitleTitleTitleTitleTitleTitleTitleTitleTitleTitle" />
 
     <ImageView
         android:id="@+id/rightButton"
