--- a/app/src/main/res/layout/activity_fixed_header.xml
+++ b/app/src/main/res/layout/activity_fixed_header.xml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content">
 
@@ -16,25 +15,18 @@
         <androidx.appcompat.widget.Toolbar
             android:id="@+id/toolbar"
             android:layout_width="match_parent"
-            android:layout_height="50dp"
+            android:layout_height="wrap_content"
             android:minHeight="0dp"
             android:outlineProvider="none"
-            app:contentInsetStart="0dp" >
+            app:contentInsetStart="0dp">
 
             <include
                 android:id="@+id/header"
+                layout="@layout/view_base_fixed_header"
                 android:layout_width="match_parent"
-                android:layout_height="50dp"
-                layout="@layout/view_base_fixed_header" />
+                android:layout_height="50dp" />
 
         </androidx.appcompat.widget.Toolbar>
     </com.google.android.material.appbar.AppBarLayout>
-
-    <RelativeLayout
-        android:id="@+id/content"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/appBar"
-        android:layout_alignParentBottom="true" />
 
 </RelativeLayout>
