--- a/app/src/main/res/layout/activity_fixed_header.xml
+++ b/app/src/main/res/layout/activity_fixed_header.xml
@@ -24,7 +24,7 @@
                 android:id="@+id/header"
                 layout="@layout/view_base_fixed_header"
                 android:layout_width="match_parent"
-                android:layout_height="50dp" />
+                android:layout_height="?android:attr/actionBarSize" />
 
         </androidx.appcompat.widget.Toolbar>
     </com.google.android.material.appbar.AppBarLayout>
