--- a/app/src/main/res/layout/view_base_fixed_header.xml
+++ b/app/src/main/res/layout/view_base_fixed_header.xml
@@ -25,7 +25,7 @@
         android:layout_toRightOf="@+id/leftButton"
         android:ellipsize="end"
         android:singleLine="true"
-        android:textSize="17sp"
+        android:textSize="@dimen/toolbar_title_size"
         android:textStyle="bold"
         tools:text="TitleTitleTitleTitleTitleTitleTitleTitleTitleTitleTitle" />
 
