--- a/app/src/main/res/layout/activity_test.xml
+++ b/app/src/main/res/layout/activity_test.xml
@@ -1,17 +1,26 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/layout_root"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context=".view.test.TestActivity">
-
-    <include layout="@layout/activity_fixed_header" />
-
-    <RelativeLayout
-        android:id="@+id/content"
+    android:padding="20dp"
+    android:gravity="center"
+    >
+    <Button
+        android:id="@+id/networkTestButton"
         android:layout_width="match_parent"
-        android:layout_height="match_parent" />
-
+        android:layout_height="wrap_content"
+        android:background="@color/teal_700"
+        android:text="네트워크 테스트"
+        />
+    <Button
+        android:id="@+id/headerTestButton"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="@color/teal_700"
+        android:layout_marginTop="20dp"
+        android:text="헤더 UI 테스트"
+        />
 </LinearLayout>
